--- a/src/stamboom/gui/StamboomGUI.fxml
+++ b/src/stamboom/gui/StamboomGUI.fxml
@@ -75,7 +75,7 @@
                                                                     </items>
                                                                 </ComboBox>
                                                                 <TextField id="tfPersoonNr" fx:id="tfGebPlaats" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                                                                <TextField id="tfPersoonNr" fx:id="tfGebDatum" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                                                                <TextField id="tfPersoonNr" fx:id="tfGebDatum" prefWidth="200.0" promptText="dd-mm-jjjj" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                                                                 <TextField fx:id="tfGeslacht" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                                                                 <ListView fx:id="lvAlsOuderBetrokkenBij" onEditCancel="null" onEditCommit="null" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="8" GridPane.rowSpan="2" />
                                                             </children>
@@ -96,11 +96,8 @@
                                                                 <RowConstraints maxHeight="25.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
                                                                 <RowConstraints maxHeight="25.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
                                                                 <RowConstraints maxHeight="25.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
-                                                                <RowConstraints maxHeight="25.0" minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
                                                             </rowConstraints>
                                                         </GridPane>
-                                          <Button layoutX="349.0" layoutY="277.0" mnemonicParsing="false" text="OK" />
-                                          <Button layoutX="275.0" layoutY="277.0" mnemonicParsing="false" text="Cancel" />
                                                     </children>
                                                 </AnchorPane>
                                             </items>
@@ -109,6 +106,99 @@
                                 </AnchorPane>
                             </content>
                         </Tab>
+                  <Tab fx:id="tabInvoerPersoon" onSelectionChanged="#selectTab" text="Invoer persoon">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <GridPane layoutX="14.0" layoutY="14.0" prefHeight="251.0" prefWidth="664.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="327.0" minWidth="10.0" prefWidth="172.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="492.0" minWidth="10.0" prefWidth="492.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Label text="Nr:" />
+                                    <Label text="Voornamen:" GridPane.rowIndex="1" />
+                                    <Label text="Tussenvoegsel:" GridPane.rowIndex="2" />
+                                    <Label text="Achternaam:" GridPane.rowIndex="3" />
+                                    <Label text="Geslacht:" GridPane.rowIndex="4" />
+                                    <Label text="GebDat:" GridPane.rowIndex="5" />
+                                    <Label text="Ouderlijk gezin:" GridPane.rowIndex="7" />
+                                    <Label text="Betrokken bij:" GridPane.rowIndex="8" />
+                                    <TextField fx:id="tfNrIN" GridPane.columnIndex="1" />
+                                    <TextField fx:id="tfVoornaamIN" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <TextField fx:id="tfTussenIN" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                    <TextField fx:id="tfAchternaamIn" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                    <TextField fx:id="tfGeslachtIn" promptText="MAN - VROUW" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                    <TextField fx:id="tfGebDatIn" promptText="dd-mm-jjjj" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                                    <ListView fx:id="lvBetrokkenIn" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                                    <ComboBox fx:id="cbOuderlijkIn" prefHeight="31.0" prefWidth="493.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                                    <Label text="GebPlaats:" GridPane.rowIndex="6" />
+                                    <TextField fx:id="tfGebPlaatsIn" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                                 </children>
+                              </GridPane>
+                              <Button fx:id="btnOKPersoon" layoutX="613.0" layoutY="279.0" mnemonicParsing="false" text="OK" />
+                              <Button fx:id="btnCancelPersoon" layoutX="530.0" layoutY="279.0" mnemonicParsing="false" text="Cancel" />
+                           </children>
+                        </AnchorPane>
+                    </content>
+                  </Tab>
+                  <Tab fx:id="tabGezin" onSelectionChanged="#selectTab" text="Gezin">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <SplitPane dividerPositions="0.29797979797979796" layoutX="14.0" layoutY="14.0" prefHeight="301.0" prefWidth="671.0">
+                                <items>
+                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                       <children>
+                                          <ComboBox fx:id="cbGezin" layoutX="14.0" layoutY="14.0" prefHeight="31.0" prefWidth="171.0" />
+                                       </children>
+                                    </AnchorPane>
+                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                       <children>
+                                          <GridPane layoutX="14.0" layoutY="14.0" prefHeight="264.0" prefWidth="443.0">
+                                            <columnConstraints>
+                                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="217.0" minWidth="10.0" prefWidth="134.0" />
+                                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="363.0" minWidth="10.0" prefWidth="309.0" />
+                                            </columnConstraints>
+                                            <rowConstraints>
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                            </rowConstraints>
+                                             <children>
+                                                <Label text="Ouder 1:" />
+                                                <Label text="Ouder 2:" GridPane.rowIndex="1" />
+                                                <Label text="Huwelijk datum:" GridPane.rowIndex="2" />
+                                                <Label text="Scheiding datum:" GridPane.rowIndex="3" />
+                                                <Label text="Kinderen:" GridPane.rowIndex="4" />
+                                                <ListView fx:id="lvKinderen" prefHeight="52.0" prefWidth="225.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                                <Label fx:id="lbOuder1" GridPane.columnIndex="1" />
+                                                <Label fx:id="lbOuder2" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                                <Label fx:id="lbHuwelijk" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                                <Label fx:id="lbScheiding" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                             </children>
+                                          </GridPane>
+                                       </children>
+                                    </AnchorPane>
+                                </items>
+                              </SplitPane>
+                           </children>
+                        </AnchorPane>
+                    </content>
+                  </Tab>
                         <Tab fx:id="tabGezinInvoer" closable="false" onSelectionChanged="#selectTab" text="Nieuw Gezin">
                             <content>
                                 <AnchorPane>
